Build jre in different builder, copy to alpine image